seeded and added reolvers and typedef

--- a/client/src/components/Cart/style.css
+++ b/client/src/components/Cart/style.css
@@ -8,7 +8,7 @@
     background-color: var(--light);
     overflow: auto;
     padding: .5rem;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, .5);
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
     border-bottom-left-radius: .5rem;
   }
   
