--- a/my-app/client/src/components/Cart/style.css
+++ b/my-app/client/src/components/Cart/style.css
@@ -68,9 +68,13 @@
       background-color: inherit;
     }*/
    
+    .uk-no-bullet {
+      list-style-type: none;
+    }
     
     
-
+  
+    
   
 
 
