--- a/my-app/client/src/index.css
+++ b/my-app/client/src/index.css
@@ -1,3 +1,7 @@
+
+
+
+
 :root {
   --primary: rgba(46, 115, 16, 0.609);
   --secondary: rgb(141, 188, 141);
@@ -8,6 +12,9 @@
   --spacing-one: calc(1rem * 0.5);
   --spacing-two: calc(1rem);
 }
+
+
+
 
 
 * {
@@ -27,7 +34,7 @@ body {
   z-index: -100;
 } */
 
-.hero-image {
+/* .hero-image {
   position: absolute;
   top: 0;
   left: 0;
@@ -40,7 +47,7 @@ body {
   object-fit: cover;
   width: 100%;
   height: 100%;
-}
+} */
 
 *{
   box-sizing: border-box;
@@ -51,7 +58,7 @@ body {
   min-height: 100%;
 }
 
-body {
+/* body {
   margin: 0;
   padding: 0;
   font-family: 'Karla', sans-serif;
@@ -59,7 +66,12 @@ body {
   line-height: 1.5;
   font-size: 16px;
   color: var(--dark);
-}
+} */
+
+
+
+
+
 
 h1,
 h2,
@@ -254,6 +266,7 @@ input:focus {
     width: 100%;
   }
 }
+
 
 
 
