--- a/client/src/components/Nav/index.css
+++ b/client/src/components/Nav/index.css
@@ -1,6 +1,6 @@
 header {
     padding: 1rem;
-    background-color: #333;
+    background-color: #493def;
     padding: 50px;
     display: flex;
     justify-content: center;
