--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,20 +27,20 @@ body {
   z-index: -100;
 } */
 
-.hero-image {
+/* .hero-image {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
-}
-
+} */
+/* 
 .hero-image img {
   object-fit: cover;
   width: 100%;
   height: 100%;
-}
+} */
 
 *{
   box-sizing: border-box;
