added Navbar components clinet

--- a/my-app/client/src/components/Cart/style.css
+++ b/my-app/client/src/components/Cart/style.css
@@ -35,9 +35,9 @@
     position: fixed;
     top: 2%;
     right: 1%;
-    font-size: 2rem;
+    font-size: 3rem;
     cursor: pointer;
-    background-color: var(--secondary);
+    background-color: var(--light);
     border-radius: 50%;
     padding: .25rem;
     width: 50px;
