--- a/my-app/client/src/components/Nav/Nav.css
+++ b/my-app/client/src/components/Nav/Nav.css
@@ -1,33 +1,61 @@
-.uk-navbar-item.uk-logo {
-  position: fixed;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: 40px;
-  color: #023b14; /* Change the color to your desired value */
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-family: Verdana, Geneva, sans-serif; /* Add your desired font name here */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5rem;
+  background-color:white
+  
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  /* text-decoration: none; */
+  color: #1b26ca;
+ font-weight: bolder;
 
 }
 
-  
- 
+.logo img {
+  width: 100px;
+  height: 100px;
+  margin-right: 0.5rem;
+}
+
+.logo span {
+  font-size: 3.5rem;
+  font-weight: bold;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+}
+
+/* .nav-link {
+  margin: 0 0.5rem;
+  text-decoration: none;
+  color: #333;
+} */
+
+.nav-link:hover {
+  text-decoration: underline;
+  color: #666;
+}
+
+.flex-row li {
+
+  background-color: #040faa;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+  border-radius: 12px;
+  font-size: 20px;
 
 
-
-
-  
-  
-
-  
-
-  
-   
-  
-  
-  
-  
-  
+}
   
