--- a/my-app/client/src/index.css
+++ b/my-app/client/src/index.css
@@ -1,7 +1,3 @@
-
-
-
-
 :root {
   --primary: rgba(46, 115, 16, 0.609);
   --secondary: rgb(141, 188, 141);
@@ -12,9 +8,6 @@
   --spacing-one: calc(1rem * 0.5);
   --spacing-two: calc(1rem);
 }
-
-
-
 
 
 * {
@@ -34,7 +27,7 @@ body {
   z-index: -100;
 } */
 
-/* .hero-image {
+.hero-image {
   position: absolute;
   top: 0;
   left: 0;
@@ -47,7 +40,7 @@ body {
   object-fit: cover;
   width: 100%;
   height: 100%;
-} */
+}
 
 *{
   box-sizing: border-box;
@@ -58,7 +51,7 @@ body {
   min-height: 100%;
 }
 
-/* body {
+body {
   margin: 0;
   padding: 0;
   font-family: 'Karla', sans-serif;
@@ -66,12 +59,7 @@ body {
   line-height: 1.5;
   font-size: 16px;
   color: var(--dark);
-} */
-
-
-
-
-
+}
 
 h1,
 h2,
@@ -235,6 +223,7 @@ input:focus {
 .px-1 {
   padding-right: var(--spacing-one);
   padding-left: var(--spacing-one);
+  border: 10 solid black;
 }
 
 .px-2 {
@@ -253,8 +242,9 @@ input:focus {
 }
 
 .card {
-  width: 25%;
+  width: 20%;
   text-align: center;
+ 
 }
 
 .error-text {
@@ -266,12 +256,4 @@ input:focus {
     width: 100%;
   }
 }
-
-
-
-
-
-
-
-
 
