--- a/my-app/client/src/components/ProductList/index.css
+++ b/my-app/client/src/components/ProductList/index.css
@@ -6,16 +6,18 @@
     justify-content: space-between;
   }
   
-  .flex-row {
+  .flex-row button select {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 1rem;
+    /* flex-direction: row; */
+    /* align-items: center; */
+    /* justify-content: space-between; */
+    margin-bottom: 2rem;
   }
   
   .my-2 {
     margin: 2rem 0;
+    font-size: 20px;
+    color: #1a237e;
   }
   
   .text-center {
@@ -23,6 +25,7 @@
   }
   
   button {
+    /* display: flex; */
     background-color: #3f51b5;
     color: #fff;
     border: none;
@@ -37,20 +40,22 @@
   }
   
   input[type="text"] {
+display: flex;
     padding: 0.5rem;
     font-size: 1rem;
     border-radius: 0.25rem;
     border: 1px solid #ccc;
-    margin-right: 1rem;
-    width: 50%;
+    margin-right: 2rem;
+    /* width: 50%; */
   }
   
   select {
+    display: flex;
     padding: 0.5rem;
     font-size: 1rem;
     border-radius: 0.25rem;
     border: 1px solid #ccc;
-    width: 30%;
+    /* width: 30%; */
   }
   
   h2 {
