--- a/my-app/client/src/components/Footer/Footer.css
+++ b/my-app/client/src/components/Footer/Footer.css
@@ -1,52 +1,88 @@
-.footer {
-    background-color: #333;
-    color: #fff;
-    padding: 50px 0;
-  }
-  
-  .footer h3 {
-    font-size: 18px;
-    margin-bottom: 20px;
-  }
-  
-  .footer p {
-    font-size: 14px;
-    line-height: 20px;
-  }
-  
-  .social-icons {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  
-  .social-icons li {
-    display: inline-block;
-    margin-right: 10px;
-  }
-  
-  .social-icons li:last-child {
-    margin-right: 0;
-  }
-  
-  .social-icons a {
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: #fff;
-    color: #333;
-    text-align: center;
-    line-height: 30px;
-    transition: all 0.3s ease;
-  }
-  
-  .social-icons a:hover {
-    transform: translateY(-5px);
-  }
-  
-  .twitter-timeline {
-    height: 200px;
-    border: none;
-  }
-  
+/* Footer.css */
+
+/* Social Icons */
+.social-icons {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.social-icons li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.social-icons li:last-child {
+  margin-right: 0;
+}
+
+.social-icons a {
+  /* color: #d32dbd; */
+  font-size: 40px;
+}
+
+/* Colors */
+footer {
+  /* background-color: #f5f5f5; */
+  padding: 400px 0;
+  width: auto;
+  /* height: 800px; */
+ background-image: url(../../assets/footer.png); 
+  background-repeat: no-repeat;
+background-size: cover;
+
+}
+
+.container {
+  margin: 0 auto;
+
+}
+
+.row {
+  margin-bottom: 20px;
+}
+
+h3 {
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+/* a {
+  color: #2234d8;
+  text-decoration: none;
+} */
+
+.twitter-timeline {
+  display: block;
+  margin-top: 10px;
+  border: none;
+  width: 100%;
+}
+
+.chat {
+
+  margin-left: 380px;
+  height: 200px;
+}
+
+.social-icons a.facebook {
+  color: #3b5998;
+}
+
+.social-icons a.twitter {
+  color: #ed006f;
+}
+
+.social-icons a.instagram {
+  color: #d32dbd;
+}
+
+.social-icons a.youtube {
+  color: #ff0000;
+}
