--- a/my-app/client/src/components/Footer/Footer.css
+++ b/my-app/client/src/components/Footer/Footer.css
@@ -1,75 +1,79 @@
-/* Footer.css */
 
-/* Social Icons */
-.social-icons {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+/* CSS Styles for the footer */
+.footer {
+  position: relative;
+  background-color: white;
+  padding: 40px 0;
+  color: #555;
 }
 
-.social-icons li {
-  display: inline-block;
-  margin-right: 10px;
-}
-
-.social-icons li:last-child {
-  margin-right: 0;
-}
-
-.social-icons a {
-  /* color: #d32dbd; */
-  font-size: 40px;
-}
-
-/* Colors */
-footer {
-  /* background-color: #f5f5f5; */
-  padding: 400px 0;
-  width: auto;
-  /* height: 800px; */
- background-image: url(../../assets/footer.png); 
-  background-repeat: no-repeat;
-background-size: cover;
-
-}
-
-.container {
+.container-footer {
+  max-width: 960px;
   margin: 0 auto;
-
+  text-align: center;
+  font-size: 38px;
 }
 
 .row {
-  margin-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.col-md-3 {
+  flex: 0 0 25%;
+  max-width: 25%;
+  padding: 0 15px;
+  box-sizing: border-box;
 }
 
 h3 {
-  font-size: 25px;
+  font-size: 28px;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 p {
-  font-size: 18px;
-  margin-bottom: 5px;
+  font-size: 20px;
+  line-height: 1.5;
 }
 
-/* a {
-  color: #2234d8;
-  text-decoration: none;
-} */
+.social-icons {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+
+.social-icons li {
+  margin: 0 5px;
+}
+
+.social-icons li a {
+  color: #555;
+  font-size: 30px;
+}
 
 .twitter-timeline {
-  display: block;
-  margin-top: 10px;
-  border: none;
   width: 100%;
+  height: 300px;
+  border: none;
 }
 
 .chat {
-
-  margin-left: 380px;
-  height: 200px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 40px;
 }
+
+
+
+
+
+
+
 
 .social-icons a.facebook {
   color: #3b5998;
